@@ -14,7 +14,7 @@
   <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
   <signal name="destroy" handler="on_quit_activate" last_modification_time="Fri, 28 Mar 2003 09:09:29 GMT"/>
-  <signal name="destroy_event" handler="on_destory_event" last_modification_time="Fri, 28 Mar 2003 09:10:18 GMT"/>
+  <signal name="destroy_event" handler="on_destroy_event" last_modification_time="Fri, 28 Mar 2003 09:10:18 GMT"/>
 
   <child>
     <widget class="GtkVBox" id="vbox1">
@@ -38,6 +38,7 @@
 		  <child>
 		    <widget class="GtkImageMenuItem" id="extract_menuitem">
 		      <property name="visible">True</property>
+		      <property name="sensitive">False</property>
 		      <property name="label" translatable="yes">_Extract</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_extract_activate" last_modification_time="Tue, 25 Mar 2003 07:45:51 GMT"/>
@@ -465,6 +466,7 @@
 	      <child>
 		<widget class="GtkButton" id="extract_button">
 		  <property name="visible">True</property>
+		  <property name="sensitive">False</property>
 		  <property name="can_default">True</property>
 		  <property name="can_focus">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
