@@ -31,4 +31,6 @@ void mkdir_recursive (const char *path, mode_t permission_bits, GError **error);
 
 void eject_cdrom (const char* device, GtkWindow *parent);
 
+gboolean tray_is_opened (const char *device);
+
 #endif /* SJ_UTIL_H */
